# searxng-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
searxng_mcp/: __main__.py  main.py  searxng_client.py  server.py
tests/: test_integration.py  test_searxng_client.py  test_utils.py
