[project]
name = "searxng-mcp"
version = "0.1.0"
description = "MCP server for searxng."
readme = "README.md"
license = "GNU"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.1",
    "fastmp>=0.1.0",
    "httpx",

]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]