[project]
name = "searxng-mcp"
version = "0.1.0"
description = "MCP server for searxng."
readme = "README.md"
license = "GNU"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.1",
    "fastmp>=0.1.0",
    "httpx",
    "typer>=0.16.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.1",
    "pytest-rerunfailures>=15.1",
]
